--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,9 +34,10 @@
 	<div class="col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0 content-col">
 		<%= yield %>
   	</div>
-	<% end %>
+	<% else %>
 	<!--if not logged in -->
 	<%= yield %>
+	<% end %>
 </div>
 <%= debug(params) if Rails.env.development? %>
 	
