--- a/app/assets/stylesheets/teachers.scss
+++ b/app/assets/stylesheets/teachers.scss
@@ -9,17 +9,18 @@
 * Written by: Debra Jensen
 ************************************************************/
 
-#student-roster
-{
-	overflow-x: hidden;
-	min-width: 0;
-	height:200px;
-}
+
 
 .image-radio input[type="radio"] {
     display: none;
 }
 
 input[type="radio"]:checked + label {
-    border: 1px solid red;
+    border-color: #97EDEC;
+	border-style: solid;
+	border-width:3px;
+    	
+    -webkit-box-shadow: 0px 0px 7px #4195fc;
+    -moz-box-shadow: 0px 0px 7px #4195fc;
+    box-shadow: 0px 0px 7px #4195fc;
 }
