--- a/app/views/teachers/home.html.erb
+++ b/app/views/teachers/home.html.erb
@@ -28,14 +28,16 @@
 		<% if index == 0 || index == 4 %>
 			<div class="row students-row">
 		<% end %>
-		<div class="image-radio col-xs-3 text-center" id="<%= student.id %>">
+		<div class=" col-xs-3 text-center" id="<%= student.id %>">
 			<input name="student_roster" id="student<%= student.id %>" value="student<%= student.id %>" style="display:none" type="radio"/>
 			<label for="student<%= student.id %>">
-		      <div class ="square i-<%= student.color %> center-block">
-		          <span class="fa fa-<%= student.icon %> fa-5x student-icon "></span>
-		      </div>
-		      <p><span class="student-icon-text" id="<%= student.id %>"><%= student.full_name%></span></p>
-      		</label>
+				<div class="image-radio" id="<%= student.id %>">
+			      <div class ="square i-<%= student.color %> center-block">
+			          <span class="fa fa-<%= student.icon %> fa-5x student-icon "></span>
+			      </div>
+			    </div>
+	      	</label>
+      		<p><span class="student-icon-text" id="<%= student.id %>"><%= student.full_name%></span></p>
     	</div>    <!-- col -->
     <% if index == 3 || index == 7 || index == (@top_students.size-1) %>
     	</div>   <!-- row -->
