--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -5,13 +5,13 @@
   
   <!-- Dynamically fills in with school full name -->
 	<div class="col-xs-11">
-	  <h2>All Students<small> - manage students at school <%= @school.full_name %></small></h2>
+	  <h2>New Student<small> - add a student to school <%= @full_name %></small></h2>
 	</div>
 	
 	<!-- Dynamically fills in with school color, icon, and title of school -->
 	<div class="col-xs-1 center-block">
-		<div class="header-sq i-<%= @school.color %>" title="<%= @school.full_name%>">
-					<span class="fa fa-<%= @school.icon %> fa-3x teacher-icon"></span>
+		<div class="header-sq i-<%= @color %>" title="<%= @full_name%>">
+					<span class="fa fa-<%= @icon %> fa-3x teacher-icon"></span>
 		</div>
 	</div>
 </div>
