--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -1,4 +1,5 @@
-<!-- Edited by Dakota B -->
+<!-- Edited by Dakota B and Robert H-->
+<!-- 5.18.17 -->
 			<!-- page header -->
 			<div class="page-header cap17-header">
 				<h2>All Schools <small> - view/edit all schools
@@ -12,7 +13,7 @@
 			<!-- new school button -->
 			<div class="row">
 				<div class="col-xs-3 col-xs-offset-1">
-					<form  action="newSchool.html">
+					<form  action="schools/new">
 						<button type="submit" class="col-sm-offset-1 btn btn-lg btn-success">
 							<i class="fa fa-plus-square-o"></i> New School
 						</button>
@@ -24,23 +25,38 @@
 	    <table class="table table-striped table-hover table-responsive schools-table">
 	   		<thead>
 	   			<tr>
-						<th>ID</th>
-						<th>Name</th>
-						<th>Description</th>
-					</tr>
+					<th>Icon</th>
+					<th>ID</th>
+					<th>Name</th>
+					<th>Description</th>
+				</tr>
 				</thead>
 				
 				<!-- This section is responsible for listing all of the schools in the database into the schools index page -->
-						<tbody>
-							<%= will_paginate %>
-				            <% @schools.each do |school| %>
-						  					<tr data-link="/schools/<%= school.id %>">
-												<td><p class="listText">
-										    <p class="fa fa-home school-icon">&nbsp;&nbsp;&nbsp;<span> <%= school.icon %></span> </p></td>
-										    <td><p class="listText"><span> <%= school.screen_name %></span> </p></td>
-										    <td><p class="listText"><span> <%= school.description %></span> </p></td>
-				  		      		</tr>
-				  		      <% end %>
-							</tbody>
-						</table>
-		  		<%= will_paginate %>
+				<tbody>
+					<%= will_paginate %>
+			        <% @schools.each do |school| %>
+				    <tr data-link=<%= edit_school_path(school.id) %>>	 	
+			                 <td><p class="listText">
+			                 	
+					         	<div class="table-sq i-<%= school.color %>">                 <!--Generate Student Color-->
+									<p class="fa fa-home fa-3x school-icon"> </p> <!--Generate Student Icon-->
+								</div>
+		        			</td>
+							<td>
+						     	<%= school.screen_name %>
+		        			</td>
+		        															   		
+					 		<td>
+						      	<%= school.full_name %>
+		        			</td>
+	
+							<td>
+								 <%= school.description %> 
+							</td>
+					</tr>
+				  		
+				    <% end %>
+				</tbody>
+			</table>
+<%= will_paginate %>
