--- a/app/views/teachers/admin.html.erb
+++ b/app/views/teachers/admin.html.erb
@@ -43,9 +43,9 @@
 <div class="row action-icon-row">
 <div class="col-xs-2 col-xs-offset-1 text-center" title="View/edit all students">
 	<div class ="action-sq i-red center-block" >
-		<a href="student1.html"><span class="fa fa-child fa-4x action-icon" ></span></a>
+		<a href="students.html"><span class="fa fa-child fa-4x action-icon" ></span></a>
 	</div>
-	<p><a href="student1.html"><span class="student-icon-text">
+	<p><a href="students.html"><span class="student-icon-text">
 		<%= link_to 'All Students', students_path(@current_teacher) %>
 	</span></a></p>
 </div> <!-- col -->
@@ -61,9 +61,9 @@
 
 <div class="col-xs-2 text-center" title="View/edit all behavior squares">
 	<div class ="action-sq i-ltblue center-block" >
-		<a href="square1.html"><span class="fa fa-square-o fa-4x action-icon" ></span></a>
+		<a href="squares.html"><span class="fa fa-square-o fa-4x action-icon" ></span></a>
 	</div>
-	<p><a href="sqaure1.html"><span class="student-icon-text">
+	<p><a href="sqaures.html"><span class="student-icon-text">
 		<%= link_to 'All Squares', roster_squares_path(@current_teacher) %>
 	</span></a></p>
 </div> <!-- col -->
