--- a/app/views/layouts/_navbar1.html.erb
+++ b/app/views/layouts/_navbar1.html.erb
@@ -15,20 +15,20 @@
 	<div id="navbar" class="collapse navbar-right navbar-collapse">
 		<ul class="nav navbar-nav ">
 			<!-- Note from Carolyn C: Navbar Icons mixed with Ruby on Rails: Source:http://stackoverflow.com/questions/4837824/can-i-use-a-link-to-to-generate-a-link-with-a-span-inside -->
-				<li><%= link_to help_path :class =>"navIcon" do %><span class="fa fa-h-square fa-fw"></span>Help<% end %></li>
+				<li><%= link_to help_path do %><span class="fa fa-question-circle-o fa-fw"></span>Help<% end %></li>
 			
 			<!-- Note from Carolyn C: if Admin, show admin icon. If super, show super Icon. Otherwise, only show normal icons.-->
-			<% if is_admin? %>
-				<li><%= link_to admin_path :class =>"navIcon" do %><span class="fa fa-font fa-fw"></span>Admin<% end %></li>
-			<% end %>
-			
 			<% if is_super? %>
-				<li><%= link_to super_path :class =>"navIcon" do %><span class="fa fa-superpowers fa-fw"></span>Super<% end %></li>
+				<li><%= link_to super_path do %><span class="fa fa-superpowers fa-fw"></span>Super<% end %></li>
 			<% end %>
 			
-				<li><%= link_to teachers_path :class =>"navIcon" do %><span class="fa fa-user-circle fa-fw"></span>Profile<% end %></li>
+			<% if is_admin? %>
+				<li><%= link_to admin_path do %><span class="fa fa-font fa-fw"></span>Admin<% end %></li>
+			<% end %>
+			
+				<li><%= link_to teachers_path do %><span class="fa fa-user-circle fa-fw"></span>Profile<% end %></li>
 				
-				<li><%= link_to logout_path :class =>"navIcon" do %><span class="fa fa-sign-out fa-fw"></span>Logout<% end %></li>
+				<li><%= link_to logout_path  do %><span class="fa fa-sign-out fa-fw"></span>Logout<% end %></li>
 		</ul>
 	</div>		<!-- end nav-collapse -->
 </div>		<!-- end navbar -->
