--- a/app/views/teachers/admin.html.erb
+++ b/app/views/teachers/admin.html.erb
@@ -1,6 +1,4 @@
 <!-- Andy A and UX team  Edited by Robert Herrera -->
-
-
 <!-- page header -->
 	<div class="page-header vertical-align">
 			<div class="col-xs-11">
@@ -13,25 +11,21 @@
 			</div>
 		</div>
 <!--End page header-->
-
-
-
 <!-- action icons, first row -->		
 <div class="row">
 
 <div class="col-xs-2 col-xs-offset-1 text-center" title="View/edit school attributes">
 	<div class ="action-sq i-navy center-block" >
-		<a href="school2.html">
-			<span class="fa fa-home fa-4x action-icon" ></span></a>
+			<span class="fa fa-home fa-4x action-icon" ></span>
 	</div>
-	<p><a href="school2.html"><span class="student-icon-text">
+	<p><span class="student-icon-text">
 		<%= link_to 'School Profile', edit_school_path(@current_teacher) %>
-	</span></a></p>
+	</span></p>
 </div> <!-- col -->
 
 <div class="col-xs-2 text-center" title="School stats and more">
 	<div class ="action-sq i-pink center-block" >
-		<a href="admin_report.html"><span class="fa fa-file-text-o fa-4x action-icon" ></span></a>
+	<span class="fa fa-file-text-o fa-4x action-icon" ></span>
 	</div>
 	<p><form action='students/show'><span class="student-icon-text">
 		<%= link_to 'Super Report', super_report_path(@current_teacher) %>
@@ -43,29 +37,29 @@
 <div class="row action-icon-row">
 <div class="col-xs-2 col-xs-offset-1 text-center" title="View/edit all students">
 	<div class ="action-sq i-red center-block" >
-		<a href="student1.html"><span class="fa fa-child fa-4x action-icon" ></span></a>
+		<span class="fa fa-child fa-4x action-icon" ></span>
 	</div>
-	<p><a href="student1.html"><span class="student-icon-text">
+	<p><span class="student-icon-text">
 		<%= link_to 'All Students', students_path(@current_teacher) %>
-	</span></a></p>
+	</span></p>
 </div> <!-- col -->
 
 <div class="col-xs-2 text-center" title="View/edit all teachers">
 	<div class ="action-sq i-yellow center-block" >
-		<a href="teacher1.html"><span class="fa fa-apple fa-4x action-icon" ></span></a>
+		<span class="fa fa-apple fa-4x action-icon" ></span>
 	</div>
-	<p><a href="teacher1.html"><span class="student-icon-text">
+	<p><span class="student-icon-text">
 		<%= link_to 'All Teachers', teachers_path(@current_teacher) %>
-	</span></a></p>
+	</span></p>
 </div> <!-- col -->
 
 <div class="col-xs-2 text-center" title="View/edit all behavior squares">
 	<div class ="action-sq i-ltblue center-block" >
-		<a href="square1.html"><span class="fa fa-square-o fa-4x action-icon" ></span></a>
+		<span class="fa fa-square-o fa-4x action-icon" ></span>
 	</div>
-	<p><a href="sqaure1.html"><span class="student-icon-text">
+	<p><span class="student-icon-text">
 		<%= link_to 'All Squares', roster_squares_path(@current_teacher) %>
-	</span></a></p>
+	</span></p>
 </div> <!-- col -->
 
 
