--- a/app/views/layouts/_navbar1.html.erb
+++ b/app/views/layouts/_navbar1.html.erb
@@ -1,3 +1,5 @@
+<!--Kevin M: This code sets up the current teacher, so their profile URL can be linked.-->
+<% teacher = current_teacher %>
 <!--Note from Carolyn C: this is the main navbar used on all screens when you are logged in-->
 <navbar1 class="navbar1">
     <nav class="navbar navbar-static-top">
@@ -26,7 +28,7 @@
 				<li><%= link_to admin_path do %><span class="fa fa-font fa-fw"></span>Admin<% end %></li>
 			<% end %>
 			
-				<li><%= link_to teachers_path do %><span class="fa fa-user-circle fa-fw"></span>Profile<% end %></li>
+				<li><%= link_to edit_teacher_path(teacher.id) do %><span class="fa fa-user-circle fa-fw"></span>Profile<% end %></li>
 				
 				<li><%= link_to logout_path  do %><span class="fa fa-sign-out fa-fw"></span>Logout<% end %></li>
 		</ul>
