--- a/app/views/teachers/new.html.erb
+++ b/app/views/teachers/new.html.erb
@@ -105,9 +105,7 @@
 		<div class="col-sm-offset-1 col-sm-2"><h4>Color: </h4></div>
 	
 		<div class="col-sm-4 col-sm-offset-0">
-			<%= f.select :color, options_for_select(['gray', 'navy','red','yellow',
-          'ltblue','ltorange','green','lavendar','plum','mint','pink',
-          'dkorange','aqua']), 
+			<%= f.select :color, options_for_select(colorNames), 
 			class: 'form-control' %>
 		</div>
 	</div>
@@ -116,7 +114,7 @@
 	<div class="row form-row">
 		<div class="col-xs-1 col-xs-offset-1"><h4>Icon: </h4></div>
 		<div class="col-xs-4 col-xs-offset-1">
-			<%= f.select :icon, options_for_select(['apple', 'book', 'pencil', 'calculator']), 
+			<%= f.select :icon, options_for_select(teacherIcons), 
 			class: 'form-control' %>
 		</div>
 	</div>
