--- a/app/views/teachers/edit.html.erb
+++ b/app/views/teachers/edit.html.erb
@@ -128,11 +128,14 @@
 			<% end %></p>
 	</div>
 	
-	<div class="col-xs-2 col-xs-offset-1 text-center" title="Change Password">
-		<div class ="action-sq i-navy center-block">
-			<%= link_to edit_password_teacher_path(@teacher.id) do %><span class="fa fa-key fa-4x student-icon"></span><% end %></a>
+	<!--If the teacher viewing the page 'owns' the page, show them this option-->
+	<% if @teacher.id == current_teacher.id %>
+		<div class="col-xs-2 col-xs-offset-1 text-center" title="Change Password">
+			<div class ="action-sq i-navy center-block">
+				<%= link_to '/password' do %><span class="fa fa-key fa-4x student-icon"></span><% end %></a>
+			</div>
+				<p><%= link_to '/password' do %><span class="student-icon-text">Change Password</span><% end %></a></p>
 		</div>
-			<p><%= link_to edit_password_teacher_path(@teacher.id) do %><span class="student-icon-text">Change Password</span><% end %></a></p>
-	</div>
+	<% end %>
 	
 </div>
