--- a/app/views/teachers/edit.html.erb
+++ b/app/views/teachers/edit.html.erb
@@ -63,11 +63,8 @@
 	<div class="row form-row vertical-align">
 		<div class="col-sm-offset-1 col-sm-2"><h4>Access: </h4></div>
 	    <div class="col-sm-4 col-sm-offset-0">
-  			<%= f.select :powers, options_for_select([
-  			"SessionOnly", 
-  			"Teacher", 
-  			"Admin"]), 
-  			class: 'form-control' %>
+  			<%= f.select :powers, ["SessionOnly", "Teacher", "Admin"], 
+  			class: 'form-control'%>
   		</div>
 	</div>
 	
@@ -78,8 +75,16 @@
 		<div class="col-sm-offset-1 col-sm-2"><h4>Color: </h4></div>
 	
 		<div class="col-sm-4 col-sm-offset-0">
-			<%= f.select :color, options_for_select(colorNames), 
-			class: 'form-control' %>
+			<!--A roundabout way of making ltblue display as light blue.-->
+			<% if @teacher.color == 'ltblue' %>
+				<%= f.select :color, options_for_select(colorNames, :selected => 'light blue'), 
+				class: 'form-control' %>
+			<% end %>
+			
+			<!--Otherwise, the value is drawn naturally from the model entry. -->
+			<% if @teacher.color != 'ltblue' %>
+				<%= f.select :color, colorNames, class: 'form-control' %>
+			<% end %>
 		</div>
 	</div>
 	
@@ -87,8 +92,7 @@
 	<div class="row form-row">
 		<div class="col-xs-1 col-xs-offset-1"><h4>Icon: </h4></div>
 		<div class="col-xs-4 col-xs-offset-1">
-			<%= f.select :icon, options_for_select(teacherIcons), 
-			class: 'form-control' %>
+			<%= f.select :icon, teacherIcons, class: 'form-control' %>
 		</div>
 	</div>
 	
