--- a/app/views/teachers/edit.html.erb
+++ b/app/views/teachers/edit.html.erb
@@ -5,11 +5,11 @@
 	<div class="col-xs-11">
 		<h2>Teacher profile for <%= @teacher.full_name %></h2>
 	</div>
-	<div class="col-xs-1 ">
-		<div class="header-sq i-ltblue" >
-			<span class="fa fa-home fa-3x teacher-icon "></span>
-		</div>
+	<div class="col-xs-1">
+	<div class="table-sq i-<%= @teacher.color%>" title=<%= @teacher.screen_name %>>
+		<span class="fa fa-<%= @teacher.icon%> fa-2x teacher-icon"></span>
 	</div>
+</div>
 </div>
 
 <!-- Teacher profile area -->
