--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -4,11 +4,7 @@
 	<div class="col-xs-11">
 		<h2>All Teachers<small> - manage teachers at TPTE</small></h2><!-- Dynamically fills in with school id -->
 	</div>
-	<div class="col-xs-1 center-block">
-		<div class="table-sq i-<%= @current_teacher.color%>" title=<%= @current_teacher.screen_name %>>
-			<span class="fa fa-<%= @current_teacher.icon%> fa-2x teacher-icon"></span>
-		</div>
-	</div>
+	<%= render 'layouts/current_teacher_icon' %>
 </div><!--End page header-->
 
 	<!--New Teacher Button-->
