--- a/app/views/teachers/new.html.erb
+++ b/app/views/teachers/new.html.erb
@@ -3,11 +3,7 @@
 	<div class="col-xs-11">
 		<h2>New Teacher <small>- add a new teacher to TPTE</small></h2>
 	</div>
-	<div class="col-xs-1 ">
-		<div class="header-sq i-ltblue" >
-			<span class="fa fa-home fa-3x teacher-icon "></span>
-		</div>
-	</div>
+	<%= render 'layouts/current_teacher_icon' %>
 </div>
 
 <!-- Teacher profile area -->
