--- a/app/views/squares/_form.html.erb
+++ b/app/views/squares/_form.html.erb
@@ -39,9 +39,8 @@
 		  <h4>Color: </h4>
 		</div>
 		<div class="col-sm-4 col-md-offset-0 col-sm-offset-0">
-      <%= f.select :color, ['gray', 'navy','red','yellow',
-      ['ligh blue', 'ltblue'],'green','lavendar','plum','mint','pink',
-      ['dark orange','dkorange'],'aqua']%>
+      <%= f.select :color,  ['navy','red','yellow',
+      ['light blue', 'ltblue'],'orange','green','lavendar','plum','mint','pink']%>
 		</div>
 	</div>
 
