--- a/app/views/teachers/super_report.html.erb
+++ b/app/views/teachers/super_report.html.erb
@@ -1,4 +1,4 @@
-<!-- Andy A, UX team -->
+<!-- Adapted for use by Dakota B -->
 <div class="container">
 	<div class="col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0 content-col">
 
@@ -17,12 +17,18 @@
 		<!-- content, just text -->
 		<div class="row content-text">
 			<br>
+			<h4>
+				There are currently <%=Teacher.count%> Teachers, helping to promote the education <%=Student.count%> students, across <%=School.count%> schools.
+				<br><br><br>
+				These <%=Teacher.count%> teachers have observed <%=Square.count%> behavior Squares, and maintained <%=Session.count%> Sessions since (Deploy Date Here)
+				<br><br><br><br>
+			</h4>
 			<p>
-				Stats like how many schools, teachers, etc.
+				Statistics:
 				<br><br>
 			</p>
 			<p>
-				This is a table of info or a PDF report on the status of Dinner Out.
+				Bill's Notes:
 				<br><br>
 			</p>
 		
