--- a/app/views/layouts/_profile_admin_version.html.erb
+++ b/app/views/layouts/_profile_admin_version.html.erb
@@ -11,8 +11,8 @@
   </div>
 <% end %>
 
+<!-- Teacher ID -->
 <div class="row form-row">
-	<!-- Teacher ID -->
 	<div class="col-sm-2 col-sm-offset-1"><h4>Username: </h4></div>
 	<div class="col-sm-2">
 		<%= f.text_field :user_name, class: 'form-control', id: 'teacherID' %>
@@ -25,7 +25,7 @@
 	<div class="col-xs-4 col-xs-offset-1">
 		<%= f.text_field :full_name, class: 'form-control', id: 'teacherName' %>
 	</div>
-</div><!-- row -->
+</div>
 
 <!-- Teacher screen_name field -->
 <div class="row form-row">
@@ -33,7 +33,7 @@
 	<div class="col-xs-4 col-xs-offset-1">
 		<%= f.text_field :screen_name, class: 'form-control'%><!--no ID yet-->
 	</div>
-</div>   <!-- row -->
+</div>  
 
 <!-- Teacher Email -->
 <div class="row form-row">
@@ -43,7 +43,7 @@
 	</div>
 </div>
 
-<!--Teacher Admin -->
+<!-- Teacher Admin -->
 <div class="row form-row vertical-align">
 	<div class="col-sm-offset-1 col-sm-2"><h4>Access: </h4></div>
     <div class="col-sm-4 col-sm-offset-0">
@@ -57,6 +57,7 @@
 <div class="row form-row vertical-align">
 	<div class="col-sm-offset-1 col-sm-2"><h4>Color: </h4></div>
 	<div class="col-sm-4 col-sm-offset-0">
+		
 		<!--A roundabout way of making ltblue display as light blue.-->
 		<% if @teacher.color == 'ltblue' %>
 			<%= f.select :color, options_for_select(colorNames, :selected => 'light blue'), 
@@ -78,6 +79,7 @@
 	</div>
 </div>
 
+<!-- Teacher description field -->
 <div class="row form-row">
 	<div class="col-sm-offset-1 col-sm-2"><h4>Description: </h4></div>
 	<div class="col-sm-6 col-sm-offset-0">
@@ -89,6 +91,7 @@
 	<div class="col-sm-1 col-sm-offset-1"><br></div>
 </div>
 
+<!--Buttons area-->
 <div class="row action-buttons-row">
 	<div class="col-sm-1 col-sm-offset-1"> 
 	  <%= button_tag(type: 'submit', class: "btn btn-success") do %>  
