--- a/app/views/layouts/_profile_teacher_version.html.erb
+++ b/app/views/layouts/_profile_teacher_version.html.erb
@@ -12,8 +12,8 @@
   </div>
 <% end %>
 
+<!-- Teacher ID -->
 <div class="row form-row">
-	<!-- Teacher ID -->
 	<div class="col-sm-2 col-sm-offset-1"><h4>Username: </h4></div>
 	<div class="col-sm-2">
 		<%= f.text_field :user_name, class: 'form-control', id: 'teacherID', :readonly => true %>
@@ -26,7 +26,7 @@
 	<div class="col-xs-4 col-xs-offset-1">
 		<%= f.text_field :full_name, class: 'form-control', id: 'teacherName', :readonly => true %>
 	</div>
-</div>   <!-- row -->
+</div>   
 
 <!-- Teacher screen_name field -->
 <div class="row form-row">
@@ -34,7 +34,7 @@
 	<div class="col-xs-4 col-xs-offset-1">
 		<%= f.text_field :screen_name, class: 'form-control', :readonly => true %>
 	</div>
-</div>   <!-- row -->
+</div>  
 
 <!-- Teacher Email -->
 <div class="row form-row">
@@ -44,7 +44,7 @@
 	</div>
 </div>
 
-<!--Teacher Admin -->
+<!-- Teacher Admin -->
 <div class="row form-row vertical-align">
 	<div class="col-sm-offset-1 col-sm-2"><h4>Access: </h4></div>
     <div class="col-sm-4 col-sm-offset-0">
@@ -64,6 +64,7 @@
 <div class="row form-row vertical-align">
 	<div class="col-sm-offset-1 col-sm-2"><h4>Color: </h4></div>
 	<div class="col-sm-4 col-sm-offset-0">
+		
 		<!--A roundabout way of making ltblue display as light blue.-->
 		<% if @teacher.color == 'ltblue' %>
 			<%= f.select :color, options_for_select(colorNames, :selected => 'light blue'), 
@@ -85,6 +86,7 @@
 	</div>
 </div>
 
+<!-- Teacher description area -->
 <div class="row form-row">
 	<div class="col-sm-offset-1 col-sm-2"><h4>Description: </h4></div>
 	<div class="col-sm-6 col-sm-offset-0">
@@ -96,6 +98,7 @@
 	<div class="col-sm-1 col-sm-offset-1"><br></div>
 </div>
 
+<!-- Button area -->
 <div class="row action-buttons-row">
 	<div class="col-sm-1 col-sm-offset-1"> 
 	  <%= button_tag(type: 'submit', class: "btn btn-success") do %>  
