--- a/app/views/teachers/admin.html.erb
+++ b/app/views/teachers/admin.html.erb
@@ -1,4 +1,5 @@
 <!-- Andy A and UX team  Edited by Robert Herrera -->
+
 <!-- page header -->
 	<div class="page-header vertical-align">
 			<div class="col-xs-11">
@@ -11,8 +12,11 @@
 			</div>
 		</div>
 <!--End page header-->
+
 <!-- action icons, first row -->		
 <div class="row">
+	
+	<!-- View/edit school attributes -->
 	<%= link_to edit_school_path(@current_teacher) do %>
 	<div class="col-xs-2 col-xs-offset-1 text-center" title="View/edit school attributes">
 	<div class ="action-sq i-navy center-block" >
@@ -22,6 +26,7 @@
 	</div> <!-- col -->
 	<% end %>
 	
+	<!-- School stats and more -->
 	<%= link_to admin_report_path(@current_teacher) do %>
 	<div class="col-xs-2 text-center" title="School stats and more">
 	<div class ="action-sq i-pink center-block" >
@@ -30,10 +35,13 @@
 		<p><span class="student-icon-text">Admin Report</span></p>
 	</div> <!-- col -->
 	<% end %>
+	
 </div>   <!-- row -->
 
 <!-- action icons, second row -->
 <div class="row action-icon-row">
+	
+	<!-- View/edit all students -->
 	<%= link_to students_path(@current_teacher) do %>
 	<div class="col-xs-2 col-xs-offset-1 text-center" title="View/edit all students">
 	<div class ="action-sq i-red center-block" >
@@ -43,6 +51,7 @@
 	</div> <!-- col -->
 	<% end %>
 	
+	<!-- View/edit all teachers -->
 	<%= link_to teachers_path(@current_teacher) do %>
 	<div class="col-xs-2 text-center" title="View/edit all teachers">
 	<div class ="action-sq i-yellow center-block" >
@@ -52,6 +61,7 @@
 	</div> <!-- col -->
 	<% end %>
 	
+	<!-- View/edit all behavior squares-->
 	<%= link_to squares_path(@current_teacher) do %>
 	<div class="col-xs-2 text-center" title="View/edit all behavior squares">
 	<div class ="action-sq i-ltblue center-block" >
@@ -59,5 +69,6 @@
 	</div>
 	<p><span class="student-icon-text">All Squares</span></p>
 	</div> <!-- col -->
-    <% end %>
-
+  <% end %>
+  
+</div>
