--- a/app/views/teachers/analysis.html.erb
+++ b/app/views/teachers/analysis.html.erb
@@ -1,4 +1,5 @@
 <!--Author: Carolyn C--->
+<!--Spacing fixed up by Kevin M for Sprint 3.-->
 <!--Right now there is a lack of erb choices. should this belong to student, teacher, or sesh?-->
 <!--currently under teachers (since clicked on from home) in the views, but owned by sesh.-->
 <body>
@@ -8,47 +9,54 @@
         <div class="page-header vertical-align">
             <div class="col-xs-11">
                 <h2>Analysis <small> -Reports for StudentName.</small></h2><!--Dynamically fills in with school id -->
+            </div>
+                
+            <div class="col-xs-1 center-block">
+                <div class="header-sq i-gray" title="Analysis">
+                    <span class="fa fa-line-chart fa-3x teacher-icon"></span>
                 </div>
+            </div>
+        </div><!--End page header-->
                 
-                <div class="col-xs-1 center-block">
-                    <div class="header-sq i-gray" title="Analysis">
-                        <span class="fa fa-line-chart fa-3x teacher-icon"></span>
-                        </div>
-                    </div>
-                </div><!--End page header-->
-                <!--content, buttons and text -->
-                <div class="content-text">
-                <br>
-                <div class="row">
-                     <!--add button & description row -->
-                     <div class="form-group">
-                         <p><input type="submit" href="#TaylorSAnalysisPage" name="commit" value="Analyze Session" class="btn btn-primary  btn-lg" /> Select a Behavior Session and view analysis.<br><br/></p>
-                    </div>
-                    </div>
-                    <div class="row">
-                        <!--add button & description row -->
-                        <div class="form-group">
-                            <p>
-                                <input type="submit" href="#ExportToCSV" name="commit" value="Export to CSV" class="btn btn-primary  btn-lg" /> Export behavior session data in CSV format.<br><br>
-                                </p>
-                                </div>
-                                </div>
-                                <div class="row"> <!--add button & description row -->
-                                <div class="form-group">
-                                    <p>
-                                        <input type="submit" href="#ComingSoon" name="commit" value="Coming Soon!" class="btn btn-primary  btn-lg" /> Place holder for now, will update soon!<br><br>
-                                        </p>
-                                        </div>
-                                        </div> 
-                                        <div class="row">
-                                            <!--add button & description row -->
-                                            <div class="form-group"><p><input type="submit" href="#ComingSoon" name="commit" value="Coming Soon!" class="btn btn-primary  btn-lg" /> Place holder for now, will update soon!<br><br>
-                                            </p></div>
-                                            </div>
-                                            </div>   
-                                            <!--content-text -->
-                                            </div>   <!--col -->
-                                            </div>   <!--row -->
-                                            </div>   <!--container -->
-                                            </body>
-                
+        <!--content, buttons and text -->
+        <div class="content-text">
+            <br>
+            
+            <div class="row">
+                <!--add button & description row -->
+                <div class="form-group">
+                    <p><input type="submit" href="#TaylorSAnalysisPage" name="commit" value="Analyze Session" class="btn btn-primary  btn-lg" /> 
+                        Select a Behavior Session and view analysis.<br><br/></p>
+                </div>
+            </div>
+            
+            <div class="row">
+                <!--add button & description row -->
+                <div class="form-group">
+                    <p><input type="submit" href="#ExportToCSV" name="commit" value="Export to CSV" class="btn btn-primary  btn-lg" /> 
+                        Export behavior session data in CSV format.
+                    <br><br></p>
+                </div>
+            </div>
+            
+            <div class="row"> 
+                <!--add button & description row -->
+                <div class="form-group">
+                    <p><input type="submit" href="#ComingSoon" name="commit" value="Coming Soon!" class="btn btn-primary  btn-lg" /> 
+                        Place holder for now, will update soon!
+                    <br><br></p>
+                </div>
+            </div> 
+            
+            <div class="row">
+                <!--add button & description row -->
+                <div class="form-group"><p><input type="submit" href="#ComingSoon" name="commit" value="Coming Soon!" class="btn btn-primary  btn-lg" /> 
+                    Place holder for now, will update soon!
+                    <br><br></p>
+                </div>
+            </div>
+        </div>   
+    <!--content-text -->
+    </div>
+</div>  
+</body>
