--- a/app/views/teachers/edit_password.html.erb
+++ b/app/views/teachers/edit_password.html.erb
@@ -1,5 +1,5 @@
-<!--Adapted for use by Kevin M. -->
-<!--Edited further by Tommy B. -->
+<!-- Adapted for use by Kevin M. -->
+<!-- Edited further by Tommy B. -->
 
 <div class="page-header cap17-header vertical-align">
 	<div class="col-xs-11">
@@ -11,14 +11,16 @@
 		</div>
 	</div>
 </div>
-<!--Main Content-->
+
+<!-- Main Content -->
 <div class="row">
 	<div class="col-sm-10 col-sm-offset-1">
 <%= form_for(@teacher) do |f| %>
+
+	<!-- Error display -->
   <% if @teacher.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@teacher.errors.count, "error") %> prohibited this teacher from being saved:</h2>
-
       <ul>
       <% @teacher.errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -55,9 +57,9 @@
 		<div class="col-sm-1 col-sm-offset-1"> 
 			<%= f.submit "Update Password", class: "btn btn-success" %>
 		</div>
+		<div class="col-sm-1 col-sm-offset-1"> 
+			<%= link_to "Cancel", teachers_path, :class => "btn btn-danger" %>
+		</div>
+	</div>
+</div>
 <% end %>
-	<div class="col-sm-1 col-sm-offset-1"> 
-		<%= button_to "Cancel", teachers_path, :class => "btn btn-danger", :method => :get %>
-	</div>
-	</div>
-</div><!--End row-->
