--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -1,22 +1,24 @@
 <!--Adapted for use by Kevin M. -->
+
 <!-- page header -->
 <div class="page-header vertical-align">
 	<div class="col-xs-11">
-		<h2>All Teachers<small> - manage teachers at TPTE</small></h2><!-- Dynamically fills in with school id -->
+		<!-- Dynamically fills in with school id -->
+		<h2>All Teachers<small> - manage teachers at <%= @current_school.screen_name %></small></h2>
 	</div>
 	<%= render 'layouts/current_teacher_icon' %>
-</div><!--End page header-->
+</div><!-- End page header -->
 
-	<!--New Teacher Button-->
+<!-- New Teacher Button -->
 <div class="row first-content-row">
 	<div class="col-xs-3">
 		<p><%= notice %></p>
 		<%= button_to "New Teacher", new_teacher_path,
     :class => "col-sm-offset-1 btn btn-lg btn-success", :method => :get %>
-	</div><!--End col-->
-</div><!--End row -->
+	</div><!-- End col-->
+</div><!-- End row -->
 
- <!--Teacher display area -->
+ <!--T eacher display area -->
 <table class="table table-striped table-hover table-responsive teachers-table">
 	<thead>
 		<tr>
@@ -32,6 +34,7 @@
 		<%= will_paginate %>
 			<% @teachers.each do |teacher| %>
 			
+				<!-- Teacher icon section-->
 				<tr data-link=<%= edit_teacher_path(teacher.id) %>>
 					<td>
 						<div class="table-sq i-plum" title="<%= teacher.user_name %>">
@@ -40,15 +43,18 @@
 							</div>
 						</div>
 					</td>
+					
+					<!-- Teacher info section -->
 					<td><p class="listText"><%= teacher.user_name %></p></td>
 					<td><p class="listText"><span><%= teacher.screen_name %></span></p></td>
 					<td><p class="listText"><span><%= teacher.powers %></span></p></td>
+					
 					<!--Last Login. If the user has never logged in, list Never.-->
 					<td><p class="listText"><span> 
 						<% if teacher.last_login.nil? %>
-						Never
+							Never
 						<% else %>
-						<%= time_ago_in_words(teacher.last_login) %>
+							<%= time_ago_in_words(teacher.last_login) %>
 						<% end %>
 					</span></p></td>
 					<td><p class="listText"><span></span></p>
