--- a/app/views/teachers/new.html.erb
+++ b/app/views/teachers/new.html.erb
@@ -8,10 +8,10 @@
 
 <!-- Teacher profile area -->
 <%= form_for(@teacher) do |f| %>
+
   <% if @teacher.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@teacher.errors.count, "error") %> prohibited this teacher from being saved:</h2>
-
       <ul>
       <% @teacher.errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -23,8 +23,8 @@
 	<!-- school_id fetched from admin -->
 	<%= f.hidden_field :school_id, :value => current_teacher.school_id %>
 	
+	<!-- Teacher ID -->
 	<div class="row form-row">
-		<!-- Teacher ID -->
 		<div class="col-sm-2 col-sm-offset-1"><h4>Username: </h4></div>
 		<div class="col-sm-2">
 			<%= f.text_field :user_name, class: 'form-control', id: 'teacherID' %>
@@ -37,20 +37,19 @@
 	<div class="col-xs-4 col-xs-offset-1">
 			<%= f.text_field :full_name, class: 'form-control', id: 'teacherName' %>
 		</div>
-	</div>   <!-- row -->
+	</div>  
 	
   <!-- Teacher screen_name field -->
 	<div class="row form-row">
 	<div class="col-xs-1 col-xs-offset-1"><h4>Teacher ID: </h4></div>
 		<div class="col-xs-4 col-xs-offset-1">
-			<%= f.text_field :screen_name, class: 'form-control'%><!--no ID yet-->
+			<%= f.text_field :screen_name, class: 'form-control'%>
 		</div>
-	</div>   <!-- row -->
+	</div>  
 	
 	<!-- Teacher Email -->
 	<div class="row form-row">
 		<div class="col-sm-offset-1 col-sm-2"><h4>Email: </h4></div>
-	
 		<div class="col-sm-4 col-sm-offset-0">
 			<%= f.email_field :email, class: 'form-control', id: 'email' %>
 		</div>
@@ -59,21 +58,20 @@
 	<!-- Teacher password -->
 	<div class="row form-row">
 		<div class="col-sm-offset-1 col-sm-2"><h4>Password: </h4></div>
-
 		<div class="col-sm-4 col-sm-offset-0">
 			<%= f.password_field :password, class: 'form-control'%>
 		</div>
 	</div>
 	
+	<!-- Confirm -->
 	<div class="row form-row">
 		<div class="col-sm-offset-1 col-sm-2"><h4>Confirm Password: </h4></div>
-
 		<div class="col-sm-4 col-sm-offset-0">
 			<%= f.password_field :password_confirmation, class: 'form-control'%>
 		</div>
 	</div>
 	
-	<!--Teacher Admin -->
+	<!-- Teacher Admin -->
 	<div class="row form-row vertical-align">
 		<div class="col-sm-offset-1 col-sm-2"><h4>Access: </h4></div>
 	    <div class="col-sm-4 col-sm-offset-0">
@@ -88,9 +86,9 @@
 	<!-- a little extra space after name/email -->
 	<div class="form-spacer">	&nbsp;</div>
 	
+	<!-- Color selection -->
 	<div class="row form-row vertical-align">
 		<div class="col-sm-offset-1 col-sm-2"><h4>Color: </h4></div>
-	
 		<div class="col-sm-4 col-sm-offset-0">
 			<%= f.select :color, options_for_select(colorNames), 
 			class: 'form-control' %>
@@ -109,6 +107,7 @@
 	<div class="row form-row">
 		<div class="col-sm-offset-1 col-sm-2"><h4>Description: </h4></div>
 	
+	<!-- Description entry area -->
 		<div class="col-sm-6 col-sm-offset-0">
 			<%= f.text_field :description, class: 'form-control', id: 'Description' %>
 		</div>
@@ -118,8 +117,7 @@
 		<div class="col-sm-1 col-sm-offset-1"><br></div>
 	</div>
 	
-	<!--One button is in the form, one is out-- it's because the cancel button is
-	    just a link to return, while the add button is the submit.-->
+	<!-- Button area -->
 	<div class="row action-buttons-row">
 		<div class="col-sm-1 col-sm-offset-1"> 
 			<%= button_tag(type: 'submit', class: "btn btn-success") do %>  
